--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
                 <div class="member" >
                     <img src ="assets/img/dentist bg.jpg" class="img-fluid"  >
                     <div class="member-caption">
-                        <h2 class="card-title">Mo Salah Website</h2>
-
-                  <p >static website for Dr Mohamed salah </p>
+                        <h2 class="card-title"> Dr Mo Salah Website</h2>
+<p> website for dr mohamed salah</p>
+               
                   <a href="https://eldeepweb.com/bassam/mo-salah/" class="btn  mr-2"><i class="fas fa-link"></i> Visit Site</a>
                   <a href="https://github.com/BassamRamadan2611/Dentist-App" class="btn"><i class="fab fa-github"></i> Github</a>
                   
